--- a/src/sass/_structure.scss
+++ b/src/sass/_structure.scss
@@ -2,8 +2,7 @@
     --white:    #{$color-white};
     --black:    #{$color-black};
     --grey:     #{$color-grey};
-    --shadow-1:     rgba(0,0,0, .1);
-    --shadow-2:     rgba(0,0,0, .05);
+    --grey-2:   #{$color-grey-2};
 }
 
 html {
