--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,3 +1,4 @@
 $color-white:               #FFF;
 $color-black:               #262626;
 $color-grey:                #A79E9E;
+$color-grey-2:              #e7e7e7;
