--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -41,7 +41,7 @@
 
         color: var(--black);
         box-sizing: border-box;
-        box-shadow: 3px 3px 5px 0 var(--shadow-1), -3px -3px 5px 0 var(--shadow-2);
+        border: 1px solid var(--grey-2);
         width: 200px;
         height: 200px;
         border-radius: 100%;
@@ -102,7 +102,7 @@
     &-grid {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        grid-gap: 39px;
+        grid-gap: 40px;
         padding: 0;
         margin: 0;
     }
@@ -114,8 +114,8 @@
             color: var(--black);
             display: grid;
             border-radius: 5px;
-            box-shadow: 3px 3px 5px 0 var(--shadow-1), -3px -3px 5px 0 var(--shadow-2);
-            grid-template-rows: auto 30px;
+            border: 1px solid var(--grey-2);
+            grid-template-rows: auto 64px;
             grid-template-columns: auto 32px;
             align-items: center;
             width: 100%;
@@ -123,11 +123,12 @@
             overflow: hidden;
 
             &-icon {
-                @extend .ttl-sm;
+                @extend .ttl-md;
 
                 box-sizing: border-box;
                 text-align: center;
                 height: 100%;
+                line-height: 64px;
                 margin: 0;
             }
 
@@ -149,9 +150,10 @@
             &-text {
                 @extend .ttl-sm;
 
-                padding: 0 10px;
+                padding: 0 18px;
                 margin: 0;
                 height: 100%;
+                line-height: 64px;
                 box-sizing: border-box;
 
                 .portfolio-item-link:hover &,
@@ -195,7 +197,7 @@
                 text-overflow: ellipsis;
                 position: absolute;
                 text-align: center;
-                border-top: 1px solid var(--grey);
+                border-top: 1px solid var(--grey-2);
                 padding: 10px;
                 margin: 0;
                 bottom: 0;
@@ -218,7 +220,7 @@
         text-align: justify;
         padding: 20px 40px;
         border-radius: 5px;
-        box-shadow: 3px 3px 5px 0 var(--shadow-1), -3px -3px 5px 0 var(--shadow-2);
+        border: 1px solid var(--grey-2);
 
         &-title {
             @extend .ttl-md;
