--- a/src/sass/projects.scss
+++ b/src/sass/projects.scss
@@ -21,7 +21,6 @@
         width: 100%;
         max-height: 100vh;
         border-radius: 10px;
-        box-shadow: 3px 3px 5px 0 var(--shadow-1), -3px -3px 5px 0 var(--shadow-2);
       }
     }
 
@@ -79,7 +78,6 @@
                 object-fit: cover;
                 object-position: top center;
                 border-radius: 10px;
-                box-shadow: 3px 3px 5px 0 var(--shadow-1), -3px -3px 5px 0 var(--shadow-2);
             }
 
             label {
@@ -101,7 +99,7 @@
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);
-                box-shadow: 3px 3px 5px 0 var(--shadow-1), -3px -3px 5px 0 var(--shadow-2);
+                border: 1px solid var(--grey-2);
                 border-radius: 30px;
                 max-width: 280px;
                 width: 80%;
