--- a/src/sass/_structure.scss
+++ b/src/sass/_structure.scss
@@ -9,15 +9,24 @@ html {
     scroll-behavior: smooth;
 }
 
+html,
 body {
-    margin: 0;
-    background-color: var(--white);
-    color: var(--black);
     overflow-x: hidden;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    background-color: var(--white);
+    color: var(--black);
+}
+
+q,
 h1,
 h2,
 h3,
@@ -30,7 +39,13 @@ a,
 label,
 ul,
 ol,
-figure {
+figure,
+video,
+image,
+iframe,
+figure,
+picture,
+blockquote {
     margin: 0;
     padding: 0;
 }
@@ -39,3 +54,22 @@ ul,
 ol {
     list-style: none;
 }
+
+a {
+    font-size:100%;
+    vertical-align:baseline;
+    background:transparent;
+    text-decoration: none;
+    color: inherit;
+}
+
+button {
+    @extend %RESETBTN;
+}
+
+main {
+    .modal-open & {
+        position: fixed;
+    }
+}
+
