--- a/src/sass/projects.scss
+++ b/src/sass/projects.scss
@@ -21,6 +21,9 @@
         width: 100%;
         max-height: 100vh;
         border-radius: 10px;
+        display: block;
+        position: relative;
+        margin: 0 auto;
       }
     }
 
@@ -47,6 +50,11 @@
         padding: 104px;
         overflow-x: hidden;
         list-style: none;
+        position: relative;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         &-scroll {
             display: block;
@@ -142,6 +150,9 @@
             grid-template-columns: max-content auto;
             padding: 104px;
             grid-gap: 312px;
+            max-width: 1440px;
+            position: relative;
+            margin: 0 auto;
         }
 
         &-title {
