HOME: add treatment for safari

--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -126,7 +126,7 @@
             display: grid;
             border-radius: 5px;
             border: 1px solid var(--grey-2);
-            grid-template-rows: auto 64px;
+            grid-template-rows: 320px 64px;
             grid-template-columns: auto 32px;
             align-items: center;
             width: 100%;
