--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -19,11 +19,10 @@
         justify-content: center;
         text-align: left;
         width: to-rem($F14);
-        margin-left: to-rem($F8 * -1);
         margin-top: to-rem($F11 * -1);
         top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        left: 0;
+        transform: translate(0, -50%);
 
         h2 {
             @extend .ttl-lg;
@@ -54,26 +53,6 @@
         &:hover,
         &:focus {
             text-decoration: line-through;
-        }
-
-        &.lin {
-            $color-blue: $color-blue;
-
-            border: to-rem($F1) solid $color-blue;
-            top: to-vw($F10 * -1px, $vw-1680);
-            left: to-vw($F10 * -1px, $vw-1680);
-            width: to-vw($F15 * 1px, $vw-1680);
-            height: to-vw($F15 * 1px, $vw-1680);
-            animation: bounce-4 20s ease infinite;
-            color: $color-blue;
-        }
-
-        &.git {
-            border: to-rem($F1) solid $color-slate;
-            animation: bounce-5 10s linear infinite;
-            bottom: to-vw($F10 * 1px, $vw-1680);
-            left: to-vw($F11 * 1px, $vw-1680);
-            color: $color-slate;;
         }
 
         &.ptf {
@@ -113,7 +92,7 @@
     &-grid {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-gap: 40px;
+        grid-gap: to-rem($F10);
         padding: 0;
         margin: 0;
     }
@@ -124,10 +103,10 @@
             box-sizing: border-box;
             color: var(--black);
             display: grid;
-            border-radius: 5px;
+            border-radius: to-rem($F5);
             border: 1px solid var(--grey-2);
-            grid-template-rows: 320px 64px;
-            grid-template-columns: auto 32px;
+            grid-template-rows: to-rem($F14) to-rem($F10);
+            grid-template-columns: auto to-rem($F9);
             align-items: center;
             width: 100%;
             height: 100%;
@@ -139,7 +118,7 @@
                 box-sizing: border-box;
                 text-align: center;
                 height: 100%;
-                line-height: 64px;
+                line-height: to-rem($F10);
                 margin: 0;
             }
 
@@ -161,11 +140,12 @@
             &-text {
                 @extend .ttl-sm;
 
-                padding: 0 18px;
+                padding: 0 to-rem($F8);
                 margin: 0;
                 height: 100%;
-                line-height: 64px;
+                line-height: to-rem($F10);
                 box-sizing: border-box;
+                text-align: center;
 
                 .portfolio-item-link:hover &,
                 .portfolio-item-link:focus &,
@@ -207,15 +187,19 @@
             flex-direction: column;
 
             &-text {
-                @extend .ttl-sm;
+                @extend .ttl-xs;
 
-                padding: 20px 10px 64px;
+                line-height: to-rem($F8);
+                font-weight: 400;
+                text-align: left;
+
+                padding: to-rem($F8) to-rem($F7) to-rem($F11);
                 height: auto;
             }
 
             &-media {
-                font-size: 104px;
-                height: 380px;
+                font-size: to-rem($F12);
+                height: to-rem($F14);
             }
 
             &-year {
@@ -226,7 +210,7 @@
                 position: absolute;
                 text-align: center;
                 border-top: 1px solid var(--grey-2);
-                padding: 10px;
+                padding: to-rem($F7);
                 margin: 0;
                 bottom: 0;
             }
@@ -264,7 +248,8 @@
 .portfolio,
 .about,
 .awards {
-    padding: 248px 104px 104px;
+    @extend %MAXAREA;
+    padding-top: to-rem($F14);
 
     &-title {
         @extend .ttl-xl;
@@ -276,14 +261,18 @@
 
 .about,
 .awards {
-padding: 104px;
+    padding-top: to-rem($F13);
 }
 
 .contact {
-    padding: 64px;
+    @extend %MAXAREA;
+
+    margin-top: to-rem($F12);
+    padding-top: to-rem($F11);
+    padding-bottom: to-rem($F10);
     background-color: var(--black);
     color: var(--white);
-    margin-top: 104px;
+    
     text-align: center;
 
     &-title {
@@ -291,20 +280,19 @@ padding: 104px;
 
         text-transform: uppercase;
         color: inherit;
-        font-size: 64px;
         margin: 0;
-        padding: 0 104px 32px;
+        padding: 0 to-rem($F12) to-rem($F9);
     }
 
     &-social,
     &-other {
+        @extend %MAXAREA;
         @extend .ttl-xs;
 
         color: inherit;
-        padding: 0 104px;
 
         &-link {
-            @extend .ttl-xs;
+           
 
             color: inherit;
             text-decoration: none;
@@ -316,19 +304,26 @@ padding: 104px;
         }
 
         &-separator {
-            padding: 0 5px;
+            padding: 0 to-rem($F5);
             font-weight: 200;
         }
     }
 
     &-social {
-        padding: 0 104px 12px;
+        padding: 0 to-rem($F11) to-rem($F7);
         border-bottom: 1px solid var(--grey);
+
+        &-link {
+            @extend .ttl-sm;
+        }
     }
 
     &-other {
-        text-transform: uppercase;
-        padding: 12px 104px 0;
+        padding: to-rem($F7) to-rem($F11) 0;
+
+        &-link {
+            @extend .ttl-xs;
+        }
     }
 }
 
