--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -4,31 +4,40 @@
 @import '_placeholders';
 @import '_structure';
 
-#nav {
+.nav {
     @extend %MAXAREA;
     z-index: 100;
     left: 0;
-    top: 0;
+    top: to-rem($F7);
     position: fixed;
     justify-content: space-between;
     display: flex;
     width: 100%;
     box-sizing: border-box;
 
-    a {
-      @extend .ttl-xs   ;
+    &-link {
+      @extend .ttl-xs;
 
-      font-weight: bold;
+      font-weight: 700;
       color: var(--grey);
       text-decoration: none;
+      cursor: pointer;
 
       &:hover,
       &:focus {
-          text-decoration: line-through;
+        text-decoration: line-through;
       }
   
-      // &.router-link-exact-active {
-      //   color: white;
-      // }
+      &.router-link-exact-active,
+      &.active {
+        &::after {
+          display: block;
+          content: '';
+          width: 34%;
+          height: to-rem($F3);
+          border-radius: to-rem($F3);
+          background: var(--grey);
+        }
+      }
     }
   }
