SAGE: add project images

--- a/src/sass/projects.scss
+++ b/src/sass/projects.scss
@@ -19,7 +19,7 @@
 
       &-item {
         max-width: to-rem($F17);
-        width: 100%;
+        width: auto;
         max-height: 100vh;
         border-radius: to-rem($F7);
         display: block;
