IMAGES: fix landscape class

--- a/src/sass/projects.scss
+++ b/src/sass/projects.scss
@@ -99,7 +99,7 @@
 
             &.landscape {
                 video, img {
-                    width: to-rem($F16);
+                    width: auto;
                 }
             }
 
