--- a/src/sass/projects.scss
+++ b/src/sass/projects.scss
@@ -50,21 +50,35 @@
         width: 100%;
         box-sizing: border-box;
         background-color: var(--black);
-        padding: to-rem($F12) to-rem($F12) to-rem($F12);
-        overflow-x: hidden;
-        list-style: none;
-        position: relative;
-        margin: 0 auto;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        overflow-x: scroll;
+        scroll-snap-align: center;
+
+        /* width */
+        &::-webkit-scrollbar {
+            height: 16px;
+        }
+        
+        /* Track */
+        &::-webkit-scrollbar-track {
+            background: var(--black);
+        }
+        
+        /* Handle */
+        &::-webkit-scrollbar-thumb {
+            background: $color-grey;
+        }
+        
+        /* Handle on hover */
+        &::-webkit-scrollbar-thumb:hover {
+            background: $color-grey-2;
+        }
 
         &-scroll {
+            padding: to-rem($F12) to-rem($F12) to-rem($F12);
             display: block;
-            scroll-snap-type: x proximity;
-            overflow-x: scroll;
             white-space: nowrap;
-            scroll-snap-align: center;
+            width: max-content;
+            margin: 0 auto;
         }
 
         &-item {
@@ -75,6 +89,7 @@
             width: min-content;
             padding: 0 to-rem($F8);
             min-height: 100%;
+           
 
             &:first-of-type {
                 padding-left: 0;
@@ -89,12 +104,16 @@
                 border-radius: to-rem($F7);
             }
 
+            figure {
+                overflow: hidden;
+                border-radius: to-rem($F7);
+            }
+
             video, img {
                 width: to-rem($F14);
                 height: to-rem($F15);
                 object-fit: cover;
                 object-position: top center;
-                border-radius: to-rem($F7);
             }
 
             &.landscape {
@@ -200,24 +219,6 @@
     }
 }
 
-
-.carousel__pagination {
-    position: absolute;
-    bottom: to-rem($F12 * -1);
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.carousel__pagination-button {
-    margin: to-rem($F7);
-    width: to-rem($F7);
-    height: to-rem($F7);
-    border-radius: 100%;
-    cursor: pointer;
-    background-color: var(--grey-2);
-}
-
-.carousel__prev,
-.carousel__next {
-    display: none;
-}
+// img[lazy=loading] {
+//     filter: blur(5px);
+// }
