--- a/src/sass/projects.scss
+++ b/src/sass/projects.scss
@@ -7,33 +7,47 @@
     &-title {
         @extend .ttl-lg;
 
-        padding: to-rem($F12);
+        padding: to-rem($F10) to-rem($F8) to-rem($F9);
         text-align: center;
+
+        @include layout-1024() {
+            padding: to-rem($F12);
+        }
     }
 
     &-main {
       box-sizing: border-box;
-      width: 100%;
       background-color: var(--black);
-      padding: to-rem($F12);
+
+      @include layout-1024() {
+        padding: to-rem($F12);
+      }
 
       &-item {
-        max-width: 100%;
-        width: auto;
+        width: 100%;
         height: auto;
-        max-height: 100vh;
-        border-radius: to-rem($F7);
         display: block;
         position: relative;
         margin: 0 auto;
         object-fit: cover;
+
+        @include layout-1024() {
+            border-radius: to-rem($F7);
+            max-width: 100%;
+            max-height: 100vh;
+            width: auto;
+        }
       }
     }
 
     &-description {
         max-width: to-rem($F15);
         margin: 0 auto;
-        padding: to-rem($F12);
+        padding: to-rem($F10) to-rem($F8);
+
+        @include layout-1024() {
+            padding: to-rem($F12);
+        }
 
         &-text {
             @extend .txt-md;
@@ -74,11 +88,15 @@
         }
 
         &-scroll {
-            padding: to-rem($F12) to-rem($F12) to-rem($F12);
+            padding: to-rem($F8);
             display: block;
             white-space: nowrap;
             width: max-content;
             margin: 0 auto;
+
+            @include layout-1024() {
+                padding: to-rem($F12);
+            }
         }
 
         &-item {
@@ -99,26 +117,58 @@
                 padding-right: 0;
             }
 
-            div {
-                overflow: hidden;
-                border-radius: to-rem($F7);
-            }
 
             figure {
                 overflow: hidden;
-                border-radius: to-rem($F7);
+                border-radius: to-rem($F2);
+
+                @include layout-1024() {
+                    background: none;
+                    border-radius: to-rem($F7);
+                }
             }
 
             video, img {
-                width: to-rem($F14);
-                height: to-rem($F15);
+                width: calc(90vw - #{to-rem($F8 * 2)});
+                height: calc(70vh - #{to-rem($F8 * 2)});
                 object-fit: cover;
                 object-position: top center;
+                border-radius: to-rem($F2);
+
+                @include layout-1024() {
+                    border-radius: to-rem($F6);
+                    width: to-rem($F13);
+                    height: to-rem($F14);
+                }
+
+                @include layout-1440() {
+                    border-radius: to-rem($F7);
+                    width: to-rem($F14);
+                    height: to-rem($F15);
+                }
+
+                @include layout-2560() {
+                    width: to-rem($F15);
+                    height: to-rem($F16);
+                }
             }
 
             &.landscape {
+                figure {
+                    background-position: center top;
+                    background-size: cover;
+                    backdrop-filter: blur(10px);
+                }
+
                 video, img {
-                    width: auto;
+                    object-fit: scale-down;
+                    object-position: center;
+
+                    @include layout-1024() {
+                        width: auto;
+                        object-fit: cover;
+                        object-position: center;
+                    }
                 }
             }
 
@@ -161,19 +211,27 @@
             padding-bottom: to-rem($F5);
             max-width: to-rem($F15);
             margin: 0 auto;
-            padding: to-rem($F12) to-rem($F12) to-rem($F9) ;
+            padding: to-rem($F8) to-rem($F8) to-rem($F7);
+
+            @include layout-1024() {
+                padding: to-rem($F12) to-rem($F12) to-rem($F9) ;
+            }
         }
 
         &-related {
             @extend .txt-lg;
 
-            max-width: to-rem($F15);
             margin: 0 auto;
-            padding: 0 to-rem($F12) to-rem($F12);
+            padding: 0 to-rem($F8) to-rem($F8);
             letter-spacing: to-rem(2);
             text-align: left;
             color: var(--black);
             list-style: inside circle;
+
+            @include layout-1024() {
+                max-width: to-rem($F15);
+                padding: 0 to-rem($F12) to-rem($F12);
+            }
 
             &-link {
                 display: list-item;
@@ -197,8 +255,12 @@
     
             text-align: center;
             color: var(--white);
-            padding: to-rem($F8) to-rem($F12);
+            padding: to-rem($F9) to-rem($F7);
             background: var(--black);
+
+            @include layout-1024() {
+                padding: to-rem($F8) to-rem($F12);
+            }
 
             &-separator {
                 padding: 0 to-rem($F5);
